# ocds-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES  glama.json  server.json
.github/workflows/: release.yml
npm/: README.md  index.js  package.json  postinstall.js
src/: embedder.rs  guide.rs  lib.rs  main.rs  profile_db.rs  server.rs  state.rs  types.rs
src/tools/: company.rs  info.rs  list.rs  match_tenders.rs  mod.rs  release.rs  search.rs
tests/: integration.rs
